# gameon

./: AGENTS.md  AGENTS_v2.md  README.md  build_errors.txt  errors.txt  fix_workflow.ps1  job.md
.github/workflows/: main.yml
data/: README.md
data/example/: animation.json  approval.json  asset.json  scene.json  timeline.json
data/schema/: animation.schema.json  approval.schema.json  asset.schema.json  project.schema.json  scene.schema.json  timeline.schema.json
engine/: Cargo.toml  README.md
engine/src/: animation.rs  approval.rs  export.rs  lib.rs  loader.rs  main.rs  models.rs  renderer.rs  runtime.rs  scene_graph.rs  timeline.rs  validator.rs
